# Honours_Computer_Software

./: .gitignore  .gitmodules  CMakeLists.txt  CircularQueue.cpp  CircularQueue.h  can_queues.h  decodeScript.py  make.sh
app/: CMakeLists.txt
app/devices/: CMakeLists.txt  QHexapod.cpp  QHexapod.h  QJoint.cpp  QJoint.h  QLeg.cpp  QLeg.h  hexapod.cpp  hexapod.h  joint.cpp  joint.h  leg.cpp  leg.h
app/forms/: graphwidget.ui  hexapodcontrolwidget.ui  joint_info.ui  jointcontrolwidget.ui  jointlistitem.ui  legcontrolwidget.ui  mainwindow.ui  spinslider.ui
app/resources/: resources.qrc
app/spider/: spider.c  spider.h
app/src/: JointControlWidget.cpp  JointControlWidget.h  JointControlWidget.ui  JointsList.cpp  JointsList.h  can.cpp  can.hpp  jointcontrolwidget.cpp  jointcontrolwidget.h  jointcontrolwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/widgets/: controlwidget.cpp  controlwidget.h  graphwidget.cpp  graphwidget.h  hexapodcontrolwidget.cpp  hexapodcontrolwidget.h  jointcontrolwidget.cpp  jointcontrolwidget.h  jointlistitem.cpp  jointlistitem.h  jointlistwidget.cpp  jointlistwidget.h  legcontrolwidget.cpp  legcontrolwidget.h  legpushbutton.cpp  legpushbutton.h  qcomboboxtimed.cpp  qcomboboxtimed.h  qdoublespinboxtimed.cpp  qdoublespinboxtimed.h  qspinboxtimed.cpp  qspinboxtimed.h  spinslider.cpp  spinslider.h
devices/: CMakeLists.txt
devices/src/: joint.cpp  joint.h  rc_car.cpp  rc_car.h
